<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/inUserId"
            android:layout_width="283dp"
            android:layout_height="54dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="84dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/user_id"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/inPassword"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <EditText
            android:id="@+id/inPassword"
            android:layout_width="283dp"
            android:layout_height="50dp"
            android:layout_below="@+id/inUserId"
            android:layout_marginStart="41dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="87dp"
            android:layout_marginBottom="17dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inUserId"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="287dp"
            android:layout_height="50dp"
            android:layout_below="@+id/inPassword"
            android:layout_marginStart="41dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="83dp"
            android:layout_marginBottom="8dp"
            android:text="@string/save_user_data"
            app:layout_constraintBottom_toTopOf="@+id/btnClear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inPassword" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="285dp"
            android:layout_height="48dp"
            android:layout_below="@+id/btnSave"
            android:layout_alignParentStart="true"
            android:layout_marginStart="41dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="1dp"
            android:text="@string/clear_user_data"
            app:layout_constraintBottom_toTopOf="@+id/btnShowDefault"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSave" />

        <Button
            android:id="@+id/btnShow"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:layout_below="@+id/inPassword"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="42dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="89dp"
            android:text="@string/show"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnShowDefault" />

        <Button
            android:id="@+id/btnShowDefault"
            android:layout_width="282dp"
            android:layout_height="52dp"
            android:layout_below="@+id/btnSave"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="85dp"
            android:text="@string/show_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnClear" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>