<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="380dp"
        android:layout_height="257dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="325dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rick_and_morty_title"
        android:contentDescription="@string/app_title" />

    <Button
        android:id="@+id/view_characters_button"
        android:layout_width="249dp"
        android:layout_height="87dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="145dp"
        android:text="@string/view_all_characters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/shared_preferences_button"
        android:layout_width="249dp"
        android:layout_height="87dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="39dp"
        android:text="@string/shared_preferences"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_characters_button" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="93dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>